--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,15 @@ jobs:
           command: scp -P 9050 -r ~/qa-test/dist/* "root@51.91.96.87:/var/www/html/"
 workflows:
   version: 2
+  build-only:
+    job: build
   build-and-deploy:
     jobs:
       - build
+      - hold:
+          type: approval
+          requires:
+            - build
       - deploy:
           requires:
             - build
