--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,8 @@ jobs:
 workflows:
   version: 2
   build-only:
-    job: build
+    jobs:
+      - build
   build-and-deploy:
     jobs:
       - build
