--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,6 @@ jobs:
           command: scp -P 9050 -r ~/qa-test/dist/* "root@51.91.96.87:/var/www/html/"
 workflows:
   version: 2
-  build-only:
-    jobs:
-      - build
   build-and-deploy:
     jobs:
       - build
@@ -62,6 +59,12 @@ workflows:
           type: approval
           requires:
             - build
+          filters:
+            branches:
+              only: main
       - deploy:
           requires:
             - hold
+          filters:
+            branches:
+              only: main
